--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rat Folder</title>
     <link rel="stylesheet" href="./dist/style.bundle.css">
-    <script src="./dist/app.bundle.js"></script>
+    <script src="./dist/app.bundle.minify.js"></script>
     <style>
         body {
             min-height: 100vh;
