Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
                 <button class="rat-tree-close-button"><i class="bi bi-x"></i></button>
             </div>
         </div> -->
+
+        <div class="rat-tree-dialogInput">
+            <span class="rat-tree-dialogInput-label">Question</span>
+            <input type="text" class="rat-tree-dialogInput-input">
+            <div class="rat-tree-dialogInput-buttons">
+                <button class="rat-tree-dialogInput-button">Confirm</button>
+                <button class="rat-tree-dialogInput-button">Reject</button>
+            </div>
+        </div>
     </div>
 
     <script>
